// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#get correctly handles paths that do not exist in legacy config. 1`] = `"Unknown schema key: one"`;

exports[`#get correctly handles paths that do not exist in legacy config. 2`] = `"Unknown schema key: one.two"`;

exports[`#get correctly handles paths that do not exist in legacy config. 3`] = `"Unknown schema key: one.three"`;

exports[`#set correctly sets values for new platform config. 1`] = `
Object {
  "plugins": Object {
    "scanDirs": Array [
      "bar",
    ],
  },
}
`;

exports[`#set correctly sets values for new platform config. 2`] = `
Object {
  "plugins": Object {
    "scanDirs": Array [
      "baz",
    ],
  },
}
`;

exports[`#set tries to set values for paths that do not exist in legacy config. 1`] = `"Unknown schema key: unknown"`;

exports[`#set tries to set values for paths that do not exist in legacy config. 2`] = `"Unknown schema key: unknown.sub1"`;

exports[`#set tries to set values for paths that do not exist in legacy config. 3`] = `"Unknown schema key: unknown.sub2"`;

exports[`\`getFlattenedPaths\` returns paths from new platform config only. 1`] = `
Array [
  "__newPlatform.known",
  "__newPlatform.known2.sub",
]
`;
